--- a/.github/workflows/build-x86_64.yml
+++ b/.github/workflows/build-x86_64.yml
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: cfg_x64pc.config
+  CONFIG_FILE: cfg_x86.config
   # Custom feeds
   DIY_P1_SH: custom-feeds.sh
   # Custom configuration
