--- a/.github/workflows/build-rm2100.yml
+++ b/.github/workflows/build-rm2100.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: openwrt-21.02
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: cfg_rm2100.config
   # Custom feeds
